Add password encoding and optimize product image retrieval
Co-authored-by: imranmsec.20cse <imranmsec.20cse@gmail.com>